YEAH AuthController is working

--- a/MainApp/views/auth/login.ejs
+++ b/MainApp/views/auth/login.ejs
@@ -1,8 +1,8 @@
 <h1>Login</h1>
-<form action="/login" method="post">
+<form action="/auth/process/login" method="post">
 
-    <label for="email">Your email address?</label>
-    <input name="email" type="text"/>
+    <label for="mail">Your email address?</label>
+    <input name="mail" type="text"/>
     <br/>
 
     <label for="password">Your safe word?</label>
