--- a/MainApp/assets/styles/signup.css
+++ b/MainApp/assets/styles/signup.css
@@ -1,6 +1,6 @@
-/*===== LOGIN FORM =====*/
+/*===== SIGNUP FORM =====*/
 
-#connection {
+#signup {
     margin-top: 70px;
     text-align: center;
     background-color: #FFFFFF;
@@ -8,23 +8,10 @@
     margin-right: auto;
 
     width: 380px;
-    height: 330px;
+    height: 490px;
 
     border: 0;
     -webkit-box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.4);
     -moz-box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.4);
     box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.4);
-}
-
-#form-title {
-    padding-top: 20px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    text-align: left;
-    border-left: solid 5px #ff4182;
-}
-
-#valider {
-    width: 120px;
-    height: 45px;
 }
