--- a/MainApp/views/auth/login.ejs
+++ b/MainApp/views/auth/login.ejs
@@ -15,6 +15,12 @@
             <label class="mdl-textfield__label" for="password">Password</label>
         </div>
 
+        <%
+        if(typeof error != 'undefined'){
+            console.log(error);%>
+            <span class="mdl-textfield__error"><%= error %></span>
+        <% } %>
+
         <button id="valider" type="submit"
                 class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
             GO
