--- a/MainApp/views/auth/login.ejs
+++ b/MainApp/views/auth/login.ejs
@@ -6,12 +6,12 @@
         <h3 id="form-title" class="mdl-color-text--accent">LOGIN</h3>
 
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" id="mail" name="mail"/>
+            <input class="mdl-textfield__input" id="mail" name="mail" type="email" required/>
             <label class="mdl-textfield__label" for="mail">Mail address</label>
         </div>
 
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="password" id="password" name="password"/>
+            <input class="mdl-textfield__input" type="password" id="password" name="password" required/>
             <label class="mdl-textfield__label" for="password">Password</label>
         </div>
 
