--- a/MainApp/views/layouts/layout.ejs
+++ b/MainApp/views/layouts/layout.ejs
@@ -14,6 +14,9 @@
 
     <!--STYLES-->
     <!--STYLES END-->
+
+    <!--SCRIPTS-->
+    <!--SCRIPTS END-->
 </head>
 
 <body>
@@ -43,12 +46,14 @@
     <% if(typeof error_msg != 'undefined') { %>
     <p class="error"><i class="material-icons md-48">error</i><br/>
         <%= error_msg %>
-    </p><hr>
+    </p>
+    <hr>
 
     <% } else if(typeof success_msg != 'undefined') { %>
     <p class="success"><i class="material-icons">done</i><br/>
         <%= success_msg %>
-    </p><hr>
+    </p>
+    <hr>
     <% } %>
 
     <main class="mdl-layout__content">
@@ -58,8 +63,7 @@
         <!--TEMPLATES-->
         <!--TEMPLATES END-->
 
-
-        <!--SCRIPTS-->
-        <!--SCRIPTS END-->
+    </main>
+</div>
 </body>
 </html>
