--- a/MainApp/views/mindmap/index.ejs
+++ b/MainApp/views/mindmap/index.ejs
@@ -1,8 +1,13 @@
 <h1> This is the mindmap number <%= mindmap.id %></h1>
 
 <input type="text" name="message" id="message" placeholder="Votre message..." size="50" autofocus/>
-<button onclick="sendMessage()" >Envoyer</button>
+<button onclick="sendMessage()">Envoyer</button>
 
+<ul>
+    <% for(var i = 0; i < messages.length; i++) { %>
+    <li><%= messages[i].owner.firstname + ' ' + messages[i].owner.name + ' : ' + messages[i].data %></li>
+    <% } %>
+</ul>
 
 <script>
     io.socket.on('connect', function socketConnected() {
