Messages are now save in the database !

--- a/MainApp/views/mindmap/index.ejs
+++ b/MainApp/views/mindmap/index.ejs
@@ -10,6 +10,13 @@
 </ul>
 
 <script>
+    function sendMessage() {
+        io.socket.post("/mm/<%= mindmap.id %>/chat/public", {msg: document.getElementById('message').value});
+    }
+
+    function addMessage(){
+        // TODO Add Message function
+    }
     io.socket.on('connect', function socketConnected() {
 
 
@@ -20,9 +27,6 @@
 
             switch (message.verb) {
 
-                // Handle a public message in a room.  Only sockets subscribed to the "message" context of a
-                // Room instance will get this message--see the "join" and "leave" methods of RoomController.js
-                // to see where a socket gets subscribed to a Room instance's "message" context.
                 case 'messaged':
                     alert(message.data.msg);
                     break;
@@ -30,8 +34,4 @@
 
         });
     });
-
-    function sendMessage() {
-        io.socket.post("/mm/<%= mindmap.id %>/chat/public", {msg: document.getElementById('message').value});
-    }
 </script>
