--- a/MainApp/views/layouts/mindmap.ejs
+++ b/MainApp/views/layouts/mindmap.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title><%= (title) ? title + '|' + AppName : AppName %></title>
+    <title><%= (title) ? title + ' | ' + AppName : AppName %></title>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&lang=fr">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -25,7 +25,7 @@
                 </a>
             </nav>
 
-            <span class="mdl-layout-title">Nom de la carte mentale</span>
+            <span class="mdl-layout-title"><%= title %></span>
             <div class="mdl-layout-spacer"></div>
 
             <nav class="mdl-navigation mdl-layout--large-screen-only">
