Implement Passport module, for future external login

--- a/MainApp/views/auth/login.ejs
+++ b/MainApp/views/auth/login.ejs
@@ -29,6 +29,7 @@
 
                 <h4>Connexion via réseau social</h4>
 
+                <div class="g-signin2" data-onsuccess="onSignIn"></div>
                 <button class="mdl-js-button mdl-js-ripple-effect button-social button-social-googleplus">
                     <i class="flaticon-google116"></i>
                     Google+
