Add Google/Twitter/FB Strategy to passport

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -29,18 +29,20 @@
 
                 <h4>Connexion via réseau social</h4>
 
-                <div class="g-signin2" data-onsuccess="onSignIn"></div>
-                <button class="mdl-js-button mdl-js-ripple-effect button-social button-social-googleplus">
+                <button class="mdl-js-button mdl-js-ripple-effect button-social button-social-googleplus"
+                        onclick="location.href='http://mindmap.finch4.xyz/auth/google';">
                     <i class="flaticon-google116"></i>
                     Google+
                 </button>
 
-                <button class="mdl-js-button mdl-js-ripple-effect button-social button-social-twitter">
+                <button class="mdl-js-button mdl-js-ripple-effect button-social button-social-twitter"
+                        onclick="location.href='http://mindmap.finch4.xyz/auth/twitter';">
                     <i class="flaticon-twitter20"></i>
                     Twitter
                 </button>
 
-                <button class="mdl-js-button mdl-js-ripple-effect button-social button-social-facebook">
+                <button class="mdl-js-button mdl-js-ripple-effect button-social button-social-facebook"
+                        onclick="location.href='http://mindmap.finch4.xyz/auth/facebook';">
                     <i class="flaticon-facebook31"></i>
                     Facebook
                 </button>
