--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -2,12 +2,29 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="google-signin-client_id" content="1029741521146-qc7gbqcsgg4igqi54m7i5vhccnapnsu6.apps.googleusercontent.com">
 
     <title><%= (title) ? title + '|' + AppName : AppName %></title>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&lang=fr">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-71343349-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+
 
     <!--STYLES-->
     <!--STYLES END-->
