--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -50,7 +50,7 @@
                         </div>
                         <div class="mdl-cell mdl-cell--6-col">
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" name="paswwordConfirmation" type="password" id="input-password-confirmation">
+                                <input class="mdl-textfield__input" name="passwordConfirmation" type="password" id="input-password-confirmation">
                                 <label class="mdl-textfield__label" for="input-password-confirmation">Mot de passe (confirm.)</label>
                             </div>
                         </div>
