Add create mindmap action

--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -3,6 +3,10 @@
         <h1>Page d'accueil</h1>
     </header>
     <a href="/mm/1"> MindMap 1 !!</a>
+    <form action="/mm/create" method="post">
+        <input type="text" required/>
+        <input type="submit" value="Créer une mindap !"/>
+    </form>
     <section class="panel__content">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam consequuntur, dolorem inventore
             minus necessitatibus nihil odio officiis porro quos sunt tenetur totam. Dignissimos dolore doloremque
