--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -4,8 +4,8 @@
     </header>
     <a href="/mm/1"> MindMap 1 !!</a>
     <form action="/mm/create" method="post">
-        <input type="text" required/>
-        <input type="submit" value="Créer une mindap !"/>
+        <input type="text" name="name" required/>
+        <input type="submit" value="Créer une mindmap !"/>
     </form>
     <section class="panel__content">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam consequuntur, dolorem inventore
